--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@ header{
         </div>
 
         <div class="thumb-box">
-            <img src="thumb1.jpg" alt="Thumbnail 1">
+            <img src="20250716_232552.jpg" alt="Thumbnail 1">
         </div>
 
         <div class="description">
@@ -213,7 +213,7 @@ header{
         </div>
 
         <div class="thumb-box">
-            <img src="thumb2.jpg" alt="Thumbnail 2">
+            <img src="20250721_215758.jpg" alt="Thumbnail 2">
         </div>
 
         <div class="description">
